--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Intro canvas 2d</title>
+    <title>Ejemplos de objetos 2D mediante programacion orientada a objetos</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
@@ -18,7 +18,9 @@
         </div>
 
         <div class="d-flex flex-row bd-highlight mb-3 shadow-sm d-flex align-items-end border border-primary p-3">
-            <canvas class="border shadow" id="canvas" width="150" height="150"></canvas>
+            <canvas class="border shadow" id="canvasOOP"></canvas>
+            <canvas class="border shadow" id="canvas"></canvas>
+            <canvas class="border shadow" id="canv"></canvas>
         </div>
     </main>
 
