--- a/index.html
+++ b/index.html
@@ -1,37 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Ejemplos de objetos 2D mediante programacion orientada a objetos</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
 </head>
 
 <body>
 
-    <main class="container mt-3 d-flex-column shadow rounded p-2">
-        <div class="d-flex flex-row bd-highlight mb-3 justify-content-center">
-            <h1> Ejemplos 2d en canvas</h1>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="#">Ejemplos 2d en canvas</a>
+        </nav>
+    </header>
+    <br>
+    <main class="container flex-column mt-3 shadow rounded-3 p-1">
+        <div class="d-flex justify-content-center d-flex flex-row bd-highlight mb-3">
+            <h1>Objetos 2D Mediante OOP</h1>
         </div>
 
-        <div class="d-flex flex-row bd-highlight mb-3 shadow-sm d-flex align-items-end border border-primary p-3">
-            <canvas class="border shadow" id="canvasOOP"></canvas>
-            <canvas class="border shadow" id="canvas"></canvas>
-            <canvas class="border shadow" id="canv"></canvas>
+        <div class="d-flex flex-row shadow-sm mb-2 border p-3 justify-content-around">
+            <div>
+                <h5 class="text-center">Canvas 2D</h5>
+                <canvas class="border shadow" id="canvasOPP"></canvas>
+            </div>
+            <div>
+                <h5 class="text-center">Canvas Random</h5>
+                <canvas class="border shadow" id="canvasRandom"></canvas>
+            </div>
+            <div>
+                <h5 class="text-center">Canvas multiple</h5>
+                <canvas class="border shadow" id="canvasMultiobjt"></canvas>
+            </div>
         </div>
     </main>
-
+    <br>
+    <footer class="bg-dark text-light text-center py-3">
+        <p>Derechos Reservados &copy; 2024</p><p>Adriel E. Lorenzo Porras</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
-
 </body>
 
 </html>
